<resources>
    <string name="app_name">FabApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_fabric">Delete Fabric</string>
    <string name="action_edit_fabric">Edit Fabric</string>
    <string name="action_delete_project">Delete Project</string>
    <string name="action_edit_project">Edit Project</string>
    <string name="hint_word">Project...</string>
    <string name="hint_dimen">Dimensions...</string>
    <string name="hint_start">Start Date...</string>
    <string name="button_save">Save</string>
    <string name="button_view_projects">View projects</string>
    <string name="button_view_fabric">View fabric</string>
    <string name="button_add_fabric">Click to add fabric</string>
    <string name="button_view_fabrics">Click to view your fabrics</string>
    <string name="button_recapture_fabric">Take another picture</string>
    <string name="view_pick_date"></string>
    <string name="button_pick_date">Pick a date</string>
    <string name="button_take_picture">Take a picture of your fabric</string>
    <string name="fabric_name_hint_word">Name of the fabric.</string>
    <string name="f_line_hint_word">Name of the fabric line, if known.</string>
    <string name="f_maker_hint_word">Name of the fabric maker, if known.</string>
    <string name="f_yardage_hint_word">How much of the fabric you have, if known.</string>
    <string name="f_purchase_hint_word">Where you bought the fabric, if known.</string>
    <string name="empty_not_saved">Project not saved because it is empty.</string>
    <string name="fabric_picture">Your fabric.</string>
    <string name="fp_fabric_picture">Go to your fabrics.</string>
    <string name="fp_project_picture">Go to your projects.</string>
    <string name="DATE_FORMAT">yyyyMMdd_HHmmss</string>
    <string name="no_project">No Project</string>
    <string name="text_welcome">Welcome to the FabApp!</string>

    <!--Project Stuff-->
    <string name="project_title_string"><b>Project Title:</b> %s</string>
    <string name="project_dimension_string"><b>Dimensions:</b> %s</string>
    <string name="project_start_date_string"><b>Start Date:</b> %s</string>
</resources>
