<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ep_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ep_project_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:autofillHints="no"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_dimen"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ep_project_sd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/f_maker_hint_word"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_pick_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:text="@string/button_pick_date"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</ScrollView>